feat/master/ft00-Login. Configuration of baseFragments, configuration of publicSection navigation. Now rendering login screen.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,12 +10,14 @@
         android:supportsRtl="true"
         android:name=".commons.CustomApplication"
         android:theme="@style/AppTheme">
-        <activity android:name=".views.section2.MainActivity">
+        <activity android:name=".views.section1.commons.activity.PublicActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".views.section2.commons.activity.MainActivity">
         </activity>
     </application>
 
